manifests/media-entertainment/base/radarr/service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: radarr
  namespace: media
  labels:
    app: radarr
spec:
  selector:
    app: radarr
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 7878
      targetPort: http
