manifests/media-entertainment/base/radarr/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: radarr
  labels:
    gateway: private
    app: radarr
spec:
  hostnames:
    - radarr.lan.stamx.nl
  parentRefs:
    - name: private
      namespace: gateway-private
      sectionName: https
  rules:
    - backendRefs:
        - name: radarr
          port: 7878
